--- a/자료 구조/자료 구조.md
+++ b/자료 구조/자료 구조.md
@@ -1,66 +1,63 @@
-##### 자료구조 정리
+# 자료구조 정리
 
-#### 1. 배열 (Array)
-- 같은 타입 원소들이 연속해서 저장되어있는 자료구조
+## 1. 배열 (Array)
+같은 타입 원소들이 연속해서 저장되어있는 자료구조
 
-장점
-1. 원하는 원소 참조가 빠름 ( O(1) )
+- 장점
+  1. 원하는 원소 참조가 빠름 ( O(1) )
 
-단점
-1. 미리 크기를 정해야하고, 변경할 수 없음
-2. 삽입과 삭제가 cost가 큼 ( O(N) )
-
-
-#### 2. 연결 리스트 (Linked List)
-- 단일 링크드 리스트
-노드 : <원소, 주소> 형태의 단위 구조
-단일 링크드 리스트 : 노드들이 링크 필드에 의해 다음 노드와 연결되는 자료구조
-
-장점 : 정해져있지 않은 크기
-단점 : 원하는 원소 참조를 위해 순차적으로 접근해야함 ( O(N) )
-
-- 이중 링크드 리스트
-: 이전 노드를 가리키는 포인터도 존재 -> 양방향 탐색 가능
-
-- 환형 링크드 리스트
-: 단일 링크드 리스트의 tail과 head가 연결되어있는 형태
-cursor라는 노드를 통해 탐색 시작 지점을 알수 있다.
+- 단점
+  1. 미리 크기를 정해야하고, 변경할 수 없음
+  2. 삽입과 삭제가 cost가 큼 ( O(N) )
 
 
+## 2. 연결 리스트 (Linked List)
+1. 단일 링크드 리스트
+  - 노드 : <원소, 주소> 형태의 단위 구조
+  - 단일 링크드 리스트 : 노드들이 링크 필드에 의해 다음 노드와 연결되는 자료구조
+
+    - 장점 : 정해져있지 않은 크기
+    - 단점 : 원하는 원소 참조를 위해 순차적으로 접근해야함 ( O(N) )
+
+2. 이중 링크드 리스트
+  - 이전 노드를 가리키는 포인터도 존재 -> 양방향 탐색 가능
+
+3. 환형 링크드 리스트
+  - 단일 링크드 리스트의 tail과 head가 연결되어있는 형태
+  - cursor라는 노드를 통해 탐색 시작 지점을 알수 있다.
 
 
-3. 스택 (Stack)
-: top에서만 자료의 삽입, 삭제가 이루어지는 자료구조
-: 후입선출(LIFO, Last-In First-Out) 구조
 
-삽입, 삭제 : O(1)
+
+## 3. 스택 (Stack)
+- top에서만 자료의 삽입, 삭제가 이루어지는 자료구조
+- 후입선출(LIFO, Last-In First-Out) 구조
+
+- 삽입, 삭제 : O(1)
 
 - 응용
-1. 중위 표기법 - 연산자를 피연산자 가운데 표기하는 방법 
-ex) A+B
-2. 후위 표기법 - 연산자를 피연산자 뒤에 표기하는 방법 -> 연산자 우선순위 고려 없이 왼쪽에서 오른쪽으로 처리 가능
-ex) AB+
+  1. 중위 표기법 - 연산자를 피연산자 가운데 표기하는 방법 ex) A+B
+  2. 후위 표기법 - 연산자를 피연산자 뒤에 표기하는 방법 -> 연산자 우선순위 고려 없이 왼쪽에서 오른쪽으로 처리 가능 ex) AB+
 
 
 
-4. 큐 (Queue)
-: 원소가 rear에서 삽입되고, front를 통해 삭제되는 자료구조
-: 선입선출(First-In Last-Out) 구조
+## 4. 큐 (Queue)
+- 원소가 rear에서 삽입되고, front를 통해 삭제되는 자료구조
+- 선입선출(First-In Last-Out) 구조
 
-- 배열기반 선형 큐
-: 삽입과 삭제를 반복하면 배열의 크기를 넘어갈 수 없어 front 이전의 공간이 남아도 사용 불가능
+1. 배열기반 선형 큐
+  - 삽입과 삭제를 반복하면 배열의 크기를 넘어갈 수 없어 front 이전의 공간이 남아도 사용 불가능
 
-- 배열기반 원형 큐
-: 삽입 삭제를 반복해도 front 이전의 공간을 사용 -> 메모리 효율
-but 비어있거나 꽉차면 rear와 front가 겹쳐 구분 불가능 -> 한칸을 비워서 사용
+2. 배열기반 원형 큐
+  - 삽입 삭제를 반복해도 front 이전의 공간을 사용 -> 메모리 효율 but 비어있거나 꽉차면 rear와 front가 겹쳐 구분 불가능 -> 한칸을 비워서 사용
 
-- 양방향 큐 (데크, Deque)
-: front, read 양쪽에서 삽입, 삭제 가능한 자료구조
+3. 양방향 큐 (데크, Deque)
+  - front, read 양쪽에서 삽입, 삭제 가능한 자료구조
 
 
 
 
-5. 트리
+## 5. 트리
 : 부모 - 자식 관계로 이루어진 노드의 집합
 
 특징
@@ -85,7 +82,7 @@ Subtree : 부모 노드와의 연결을 끊고 자신을 루트로 삼았을 때
 
 
 
-6. 우선순위 큐 (Priority Queue)
+## 6. 우선순위 큐 (Priority Queue)
 : 들어간 순서에 상관 없이 우선순위에 따라 front가 달라지는 자료구조
 
 구현
@@ -110,7 +107,7 @@ Subtree : 부모 노드와의 연결을 끊고 자신을 루트로 삼았을 때
 
 
 
-7. 이진 탐색 트리 (Binary Search Tree)
+## 7. 이진 탐색 트리 (Binary Search Tree)
 이진 탐색 : 정렬된 배열에서 사용할 수 있는 탐색 알고리즘
 1. 중앙값 선택
 2. 중앙값과 목표 값 비교
@@ -131,7 +128,7 @@ Subtree : 부모 노드와의 연결을 끊고 자신을 루트로 삼았을 때
 
 
 
-8. 해싱 (Hashing)
+## 8. 해싱 (Hashing)
 해싱 - 키 값에 대한 산술 연산을 통해 테이블의 주소를 계산하여 항목에 접근하는것
 해시 테이블 - 키 값의 연산에 의해 접근 가능한 자료구조
 
@@ -176,7 +173,7 @@ ex) h(x) = x mod N
 
 
 
-9. 그래프 (Graph)
+## 9. 그래프 (Graph)
 - 정점(Vertex)과 간선(Edge)으로 이루어진 자료구조
 
 그래프와 트리의 차이
