--- a/자료 구조/자료 구조.md
+++ b/자료 구조/자료 구조.md
@@ -1,21 +1,20 @@
 # 자료구조 정리
-
+					
 ## 1. 배열 (Array)
-같은 타입 원소들이 연속해서 저장되어있는 자료구조
+- 같은 타입 원소들이 연속해서 저장되어있는 자료구조
 
 #### 장점
-  1. 원하는 원소 참조가 빠름 ( O(1) )
+- 원하는 원소 참조가 빠름 ( O(1) )
 
 #### 단점
-  1. 미리 크기를 정해야하고, 변경할 수 없음
-  2. 삽입과 삭제가 cost가 큼 ( O(N) )
+- 미리 크기를 정해야하고, 변경할 수 없음
+- 삽입과 삭제가 cost가 큼 ( O(N) )
 
-
+					
 ## 2. 연결 리스트 (Linked List)
 #### 1. 단일 링크드 리스트
-  - 노드 : <원소, 주소> 형태의 단위 구조
-  - 단일 링크드 리스트 : 노드들이 링크 필드에 의해 다음 노드와 연결되는 자료구조
-
+- 노드 : <원소, 주소> 형태의 단위 구조
+- 단일 링크드 리스트 : 노드들이 링크 필드에 의해 다음 노드와 연결되는 자료구조
     - 장점 : 정해져있지 않은 크기
     - 단점 : 원하는 원소 참조를 위해 순차적으로 접근해야함 ( O(N) )
 
@@ -27,7 +26,7 @@
   - cursor라는 노드를 통해 탐색 시작 지점을 알수 있다.
 
 
-
+				
 
 ## 3. 스택 (Stack)
 - top에서만 자료의 삽입, 삭제가 이루어지는 자료구조
@@ -37,7 +36,7 @@
 #### 응용
   1. 중위 표기법 - 연산자를 피연산자 가운데 표기하는 방법 ex) A+B
   2. 후위 표기법 - 연산자를 피연산자 뒤에 표기하는 방법 -> 연산자 우선순위 고려 없이 왼쪽에서 오른쪽으로 처리 가능 ex) AB+
-
+				
 
 
 ## 4. 큐 (Queue)
@@ -53,10 +52,10 @@
 #### 3. 양방향 큐 (데크, Deque)
   - front, read 양쪽에서 삽입, 삭제 가능한 자료구조
 
+			
+			
 
-
-
-## 5. 트리
+## 5. 트리 (Tree)
 - 부모 - 자식 관계로 이루어진 노드의 집합
 
 #### 특징
@@ -78,7 +77,7 @@
 1. 전위 순회 (preorder) : 루트 -> 자식들
 2. 후위 순회 (postorder) : 자식들 -> 루트
 
-
+				
 
 
 ## 6. 우선순위 큐 (Priority Queue)
@@ -106,14 +105,14 @@
 
 
 
-
+			
 
 ## 7. 이진 탐색 트리 (Binary Search Tree)
 #### 이진 탐색 : 정렬된 배열에서 사용할 수 있는 탐색 알고리즘
-	1. 중앙값 선택
-	2. 중앙값과 목표 값 비교
-	3. 목표 값이 중앙값보다 작으면 왼쪽에서, 크면 오른쪽에서 검색
-	4. 1~3을 값을 찾을 때까지 반복
+1. 중앙값 선택
+2. 중앙값과 목표 값 비교
+3. 목표 값이 중앙값보다 작으면 왼쪽에서, 크면 오른쪽에서 검색
+4. 1~3을 값을 찾을 때까지 반복
 
 #### 이진 탐색 트리 : 각 내부노드 v가 key(v.left) <= key(v) <= key(v.right)를 만족하는 자료구조
 
@@ -127,7 +126,7 @@
 2. 삭제 연산 : 세가지 경우 존재(1. 삭제 노드가 리프 노드, 2. 삭제 노드가 왼쪽 혹은 오른쪽 서브트리 하나만 가지고 있는 경우, 3. 삭제 노드가 두개의 서브 트리 가지고 있는 경우)
 
 
-
+						
 
 ## 8. 해싱 (Hashing)
 - 해싱 - 키 값에 대한 산술 연산을 통해 테이블의 주소를 계산하여 항목에 접근하는것
@@ -154,10 +153,11 @@
 #### 이중 해싱법 (Double Hashing)
 - 충돌 발생 시 추가적인 해시 함수 사용
 - i = h(k) = k mod M, d(k) = N - (k mod N)
-- i<j> = (i + j * d(k)) mod M
-
-
+- i(j) = (i + j * d(k)) mod M
+	
+	
 #### 탐색 방법들의 시간 복잡도
+
 | |탐색|삽입|삭제|
 |-------------|--------------|---------|---------|
 |순차 탐색|O(n)|O(1)|O(n)|
@@ -168,27 +168,61 @@
 |해싱(최악)|O(n)|O(n)|O(n)|
 
 
-
-
-
-
+				
 
 
 ## 9. 그래프 (Graph)
 - 정점(Vertex)과 간선(Edge)으로 이루어진 자료구조
 
-그래프와 트리의 차이
-	그래프			트리
-노드들을 연결하는 간선들의 집합	사이클이 없는 연결 그래프
-사이클 가능			사이클 존재 불가능
-두 정점 사이 여러 경로 가능		두 정점 사이 반드시 1개 경로
-간선 수 다양			간선 수 = 정점 수 - 1
+#### 그래프와 트리의 차이
+|그래프|트리|
+|----------------------------|--------------------------------|
+|노드들을 연결하는 간선들의 집합|사이클이 없는 연결 그래프|
+|사이클 가능|사이클 존재 불가능|
+|두 정점 사이 여러 경로 가능|두 정점 사이 반드시 1개 경로|
+|간선 수 다양|간선 수 = 정점 수 - 1|
 
-트리는 그래프의 한 종류이다.
+- 트리는 그래프의 한 종류
+- incident : 정점 - 간선 간의 인접 관계
+- adjacent : 정점 - 정점 간의 인접 관계
+	
+	
+#### 그래프 표현 방법
+1. 인접 행렬
+	- 노드 i와 j의 인접(adjacent) 여부를 O(1) 시간에 확인 가능
+	- 밀집한(dense) 그래프에서 효율적
+	- 구현 쉬움
+2. 인접 리스트
+	- 노드 v에 인접한(incident) 간선 정보를 O(deg(v)) 시간에 확인 가능
+	- 드문(sparse) 그래프에서 효율적
+	- 구현 살짝 복잡
 
 
 
+#### 그래프 순회 방법
+1. 깊이 우선 탐색 (Depth First Search, DFS)
+	- 갈수 있을 때까지 계속 가다가 막히면 가까운 갈림길로 돌아와서 다시 탐색
+	- 재귀를 이용해서 구현
+	- 정점 방문 여부를 반드시 기록 -> 안하면 무한 루프
+```
+DFS(G, v):
+	visited[v] = true;
+	for all edges from v to w in G.incidentEdges(v)
+		if (w is not visited)
+			DFS(G, w)
+```
 
-
-
-
+2. 너비 우선 탐색 (Breadth First Search)
+	- 최단 경로 찾기에 용이
+	- 거리가 가까운 정점부터 방문
+	- queue를 사용
+```
+BFS(G, s):
+	queue.push(s)
+	while queue is not empty
+		v = queue.pop()
+		for each vertex w adjacent on v
+			if (v is not explored)
+				queue.push(w)
+				label w as discovered
+```
